samples/_failures_safe/1761074566_107588_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2a0f4da.c: In function ‘process_event’:
./samples/SAFE/__tmp_e2a0f4da.c:171:7: error: expected ‘;’ at end of input
  171 |     sm
      |       ^
      |       ;
./samples/SAFE/__tmp_e2a0f4da.c:171:5: error: expected declaration or statement at end of input
  171 |     sm
      |     ^~
